modified links to about page

--- a/about/aboutme.html
+++ b/about/aboutme.html
@@ -40,7 +40,7 @@
 
         <div class='textholder-p'>
         <div class='text'>
-        <p>My name is Jesus Lares, I am currently a sophomore at MIT studying physics and computer science. I have always striven to work alongside my passions. Whether that be in an idea, a community, or a personal goal, it is this which drives me; I have never followed the grain searching to fit in. I find the deepest satisfaction to be had in work that I wholeheartedly enjoy. That being said, I understand that passion alone is only a necessary condition.<br><br>
+        <p>My name is Jesus Lares. I was born in Venezuela and immigrated to the US when I was 5; I reside in Boston. I am currently a sophomore at MIT studying physics and computer science. I have always striven to work alongside my passions. Whether that be in an idea, a community, or a personal goal, it is this which drives me; I have never followed the grain searching to fit in. I find the deepest satisfaction to be had in work that I wholeheartedly enjoy. That being said, I understand that passion alone is only a necessary condition.<br><br>
 
         I value determination and self-discipline. I firmly believe that, with these two traits, any obstacle in life, no matter how big or how small, can be overcome. I also like to create. I often search for jobs where I can interplay creativity with craftsmanship. Particularly, this is why I am interested in fields such as computer science, phyiscs, and engineering. I enjoy interpreting problems, viewing them from a range of perspectives, and coming up with innovative solutions. I love making Unity projects, such as games and simulations. I find it so satisfying to make proper visualizations of interesting concepts in this manner.
         Likewise, I love making visualizations for datasets. However, my passion for data science truly comes from the exploration of the data itself: finding surprising trends and predictions. Data science often feels like I am using a computer to go beyond my human limitations; leveraging the power of computation to get a hint about some complicated trend - it is truly wonderful!<br><br>
@@ -50,7 +50,7 @@
         </div>
         </div>
 
-        <div class="textholder"><h2>Education</h2></div>
+        <div id='EducationSection'><div class="textholder"><h2>Education</h2></div></div>
 
         <div class="card">
         <div class="container">
@@ -62,7 +62,9 @@
         <div class="card">
         <div class="container">
             <h4><b>Computer Science</b></h4>
-            <p>Hello There</p>
+            <p>With every passing day it feels more to me like we are living in a technological renaissance. Computer science is advancing all over the board incredibly quickly. Computers are being used as a tool to solve some of
+            the most pressing problems which have ever faced humanity. I am majoring in computer science at MIT, however I would describe myself more as a full stack developer or a data scientist than a veritable computer scientist. These are the things which I have a true passion for: I like to build things. What I mean is that I
+            like designing systems from front to back then developing them; understanding as much about the project as I can. The systems which I enjoy most, however, are those leveraging absolutely mad data sets to realize outrageous results. The things which machine learning and artificial intelligence are doing these days inspire and confound me. I know that this is where I want to be.</p>
         </div>
         </div>
 
@@ -130,7 +132,9 @@
         <div class="card">
         <div class="container">
             <h4><b>Physics</b></h4>
-            <p>Hello There</p>
+            <p>My entire life I have been curious about the world. This is the first subject I can say I was ever truly passionate about. Every time I take a physics class I have had my mind blown; I live in a constant state of surprise due to the complex and unintuitive nature of the universe we live in. It makes me feel very small but in an inspiring way!
+            That moment when you truly 'get' something as unintuitive as relativity, maxwells equations, or essentially any concept within physics is among the most satisfying things in life.<br><br>Past just the romance of it, however, there is actually math behind it all. We can make accurate predictions about this absolutely insane and unintuitive world we live in.
+            That blows my mind and fills me with hope for humanity. Almost everything we have today, and usually take granted, is due to our tiny bubble of knowledge among the vast sea of mystery which is the universe! The possibilities are enticing.</p>
         </div>
         </div>
 
@@ -147,51 +151,81 @@
         <div class="container">
             <h4><b>Economics</b></h4>
             <h5>and Consulting</h5>
-            <p></p>
+            <p>I work with the MIT consulting group on a case each semester. I find it very valuable to interface with a wide variety of companies and get a feel for how they really work, on top of delving deep into a new subject.
+            <br><br>Furthermore I am also captivated by the field of economics. As a physics major I have been exposed to many extremely interesting and complicated systems, and been pushed to rigorously analyze and characterize them. I love this; to step into a new world with its own rules, to explore and poke around, and to eventually form layers of understanding. There is no such system which captivates me more than the market, the enormous world depicting aggregate exchange and interaction.</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>Language</b></h4>
-            <h5></h5>
-            <p></p>
+            <h5>Languages I am familiar with</h5>
+            <h6>English - Fluent</h6>
+            <progress max="100" value="100"></progress>
+            <p>English is the language I have spoken for most of my life.</p>
+            <h6>Spanish - Fluent</h6>
+            <progress max="100" value="85"></progress>
+            <p>Spanish is my native language and I speak it at home.</p>
+            <h6>French - Fluent</h6>
+            <progress max="100" value="80"></progress>
+            <p>I studied French for 5 years and lived a month in Grenoble, France, teaching physics.</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>Philosophy</b></h4>
-            <h5></h5>
-            <p></p>
+            <p>I took part in the IB program in my high school, which greatly exposed me to Philosophy, History, and Literature.
+            I took a class called "Theory of Knowledge" which was essentially a crash course of western philosophy and fell in love with it. From then on, I have spent countless hours
+            reading, listening to podcasts, and thinking about the hugely varied ideas within philosophy.
+            <br><br>In truth, to study philosophy is just to think about the nature of something.</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>History</b></h4>
-            <h5></h5>
-            <p></p>
+            <p>One of my most time consuming hobbies is playing historical simulation video games; I have spent hundreds of hours on them. An upside of this is that I discovered a love for history in myself. While these simulators themselves to tend to teach history,
+             they were also an impotus for me to continue my studies mostly through countless hours of youtube videos and wikipedia articles.
+             <br><br>I am mostly interested in European history, and am fairly well studied in the periods from antiquity, the Roman Republic and empire, up until the Second World War.</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>Literature</b></h4>
-            <h5></h5>
-            <p></p>
+            <p>I used to dislike literature when I was young, however I had the great luck of being exposed to it in a new light by awesome teachers. In 9th grade I had to do an extremely boring project on the Odyssey before I entered high school. When my teacher made us present it, however, we had to dress up as gods and act it out. I could almost see the stories I had read about, it was fun. And from there on I realized that every work of literature is so much more than just words on a page. Literature is storytelling, usually deep and enlightening, where authors use cool tricks of language to convey a huge range of really interesting ideas.
+            <br><br>That moment when you 'get' a really deep metaphor is kind of perfect and usually very enlightening; whatever idea the author was trying to convey.</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>Favorite Books</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <ul>
+                <li>Foundation<br><span>Isaac Asimov</span></li>
+                <li>Frankenstein<br><span>Mary Shelley</span></li>
+                <li>Heart of Darkness<br><span>Joseph Conrad</span></li>
+                <li>The Republic<br><span>Plato</span></li>
+                <li>Hamlet<br><span>Shakespeare</span></li>
+            </ul>
         </div>
         </div>
 
-        <div class="textholder"><h2>Interests</h2></div>
+        <div class="card">
+        <div class="container">
+            <h4><b>Favorite Podcasts</b><br></h4>
+            <ul>
+                <li>Freaknomics<br><span>Stephen Dubner</span></li>
+                <li>Artificial Intelligence Podcast<br><span>Lex Fridman</span></li>
+                <li>Philosophize This<br><span>Stephen West</span></li>
+                <li>Overheard at National Geographic<br><span>National Geographic</span></li>
+                <li>Tech News and Money Briefings<br><span>Wall Street Journal</span></li>
+            </ul>
+        </div>
+        </div>
+
+        <div id='InterestSection'><div class="textholder"><h2>Interests</h2></div></div>
 
         <div class="card">
         <div class="container">
