--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 <div class = "aboutBoxLink"><a href='./about/aboutme.html'>Who am I?</a></div>
             </div>
             <div class="aboutbox">
-                <div class = "aboutBoxLink"><a>Education</a></div>
+                <div class = "aboutBoxLink"><a href='./about/aboutme.html#EducationSection'>Education</a></div>
             </div>
             <div class="aboutbox">
-                <div class = "aboutBoxLink"><a>Interests</a></div>
+                <div class = "aboutBoxLink"><a href='./about/aboutme.html#InterestSection'>Interests</a></div>
             </div>
         </div>
     </section>
