added inital blog and hiking info

--- a/about/aboutme.html
+++ b/about/aboutme.html
@@ -63,8 +63,8 @@
         <div class="container">
             <h4><b>Computer Science</b></h4>
             <p>With every passing day it feels more to me like we are living in a technological renaissance. Computer science is advancing all over the board incredibly quickly. Computers are being used as a tool to solve some of
-            the most pressing problems which have ever faced humanity. I am majoring in computer science at MIT, however I would describe myself more as a full stack developer or a data scientist than a veritable computer scientist. These are the things which I have a true passion for: I like to build things. What I mean is that I
-            like designing systems from front to back then developing them; understanding as much about the project as I can. The systems which I enjoy most, however, are those leveraging absolutely mad data sets to realize outrageous results. The things which machine learning and artificial intelligence are doing these days inspire and confound me. I know that this is where I want to be.</p>
+            the most pressing problems which have ever faced humanity. I am majoring in computer science at MIT, however I would describe myself more as a full stack developer or a data scientist than a true computer scientist. These are the things which I have a true passion for: I like to build things. What I mean is that I
+            like designing systems from front to back then developing them; understanding as much about the project as I can. The systems which I enjoy most, however, are those leveraging mad data sets to realize outrageous results. The things which machine learning and artificial intelligence are doing these days inspire and confound me. I know that this is where I want to be.</p>
         </div>
         </div>
 
@@ -134,7 +134,7 @@
             <h4><b>Physics</b></h4>
             <p>My entire life I have been curious about the world. This is the first subject I can say I was ever truly passionate about. Every time I take a physics class I have had my mind blown; I live in a constant state of surprise due to the complex and unintuitive nature of the universe we live in. It makes me feel very small but in an inspiring way!
             That moment when you truly 'get' something as unintuitive as relativity, maxwells equations, or essentially any concept within physics is among the most satisfying things in life.<br><br>Past just the romance of it, however, there is actually math behind it all. We can make accurate predictions about this absolutely insane and unintuitive world we live in.
-            That blows my mind and fills me with hope for humanity. Almost everything we have today, and usually take granted, is due to our tiny bubble of knowledge among the vast sea of mystery which is the universe! The possibilities are enticing.</p>
+            That blows my mind and fills me with hope for humanity. Almost everything we have today, and usually take for granted, is due to our tiny bubble of knowledge among the vast sea of mystery which is the universe! The possibilities are enticing.</p>
         </div>
         </div>
 
@@ -152,7 +152,7 @@
             <h4><b>Economics</b></h4>
             <h5>and Consulting</h5>
             <p>I work with the MIT consulting group on a case each semester. I find it very valuable to interface with a wide variety of companies and get a feel for how they really work, on top of delving deep into a new subject.
-            <br><br>Furthermore I am also captivated by the field of economics. As a physics major I have been exposed to many extremely interesting and complicated systems, and been pushed to rigorously analyze and characterize them. I love this; to step into a new world with its own rules, to explore and poke around, and to eventually form layers of understanding. There is no such system which captivates me more than the market, the enormous world depicting aggregate exchange and interaction.</p>
+            <br><br>Furthermore I am also captivated by the field of economics. As a physics major I have been exposed to many extremely interesting and complicated systems, and been pushed to rigorously analyze and characterize them. I love this; to step into a new world with its own rules, to explore and poke around, and to eventually form layers of understanding. One such system which captivates me most is the market, the enormous world depicting aggregate exchange and interaction.</p>
         </div>
         </div>
 
@@ -178,15 +178,15 @@
             <p>I took part in the IB program in my high school, which greatly exposed me to Philosophy, History, and Literature.
             I took a class called "Theory of Knowledge" which was essentially a crash course of western philosophy and fell in love with it. From then on, I have spent countless hours
             reading, listening to podcasts, and thinking about the hugely varied ideas within philosophy.
-            <br><br>In truth, to study philosophy is just to think about the nature of something.</p>
+            <br><br>In my opinion, to study philosophy is just to think about the nature of something.</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>History</b></h4>
-            <p>One of my most time consuming hobbies is playing historical simulation video games; I have spent hundreds of hours on them. An upside of this is that I discovered a love for history in myself. While these simulators themselves to tend to teach history,
-             they were also an impotus for me to continue my studies mostly through countless hours of youtube videos and wikipedia articles.
+            <p>One of my most time consuming hobbies is playing historical simulation video games; I have literally spent hundreds of hours on them (EU4, Victoria 2, Crusader Kings 2, HOI4, Civilization, Total War, etc). An upside of this is that I discovered a love for history in myself. While these simulators themselves to tend to teach history,
+             they were also an impotus for me to continue my studies mostly through many more hours of youtube videos and wikipedia articles.
              <br><br>I am mostly interested in European history, and am fairly well studied in the periods from antiquity, the Roman Republic and empire, up until the Second World War.</p>
         </div>
         </div>
@@ -194,7 +194,7 @@
         <div class="card">
         <div class="container">
             <h4><b>Literature</b></h4>
-            <p>I used to dislike literature when I was young, however I had the great luck of being exposed to it in a new light by awesome teachers. In 9th grade I had to do an extremely boring project on the Odyssey before I entered high school. When my teacher made us present it, however, we had to dress up as gods and act it out. I could almost see the stories I had read about, it was fun. And from there on I realized that every work of literature is so much more than just words on a page. Literature is storytelling, usually deep and enlightening, where authors use cool tricks of language to convey a huge range of really interesting ideas.
+            <p>I used to dislike literature when I was young, however I had the great luck of being exposed to it in a new light by awesome teachers. In 9th grade I had to do an extremely boring project on the Odyssey before I entered high school. When my teacher made us present it, however, we had to dress up as gods and heroes and act it out. I could almost see the stories I had read about, it was fun. And from there on I realized that every work of literature is so much more than just words on a page. Literature is storytelling, usually deep and enlightening, where authors use cool tricks of language to convey a huge range of really interesting ideas.
             <br><br>That moment when you 'get' a really deep metaphor is kind of perfect and usually very enlightening; whatever idea the author was trying to convey.</p>
         </div>
         </div>
@@ -230,8 +230,24 @@
         <div class="card">
         <div class="container">
             <h4><b>Exploring</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <img src='../img/winterTree.jpg'></img>
+            <p>I love to explore. As a naturally curious person, there is something about seeings new things which hits a spot like nothing else does.<br><br>
+            Hiking is possibly my favorite hobby - in my opinion nature has created some of the most beautiful and amazing things imaginable right here on our planet. The sense of wonder and amazement I get when seeing a faroff mountain peak, endless ocean, colorful jungle, or vast desert is  a touch to the heart which really nothing else can provide. Then the act of hiking itself: hours of work, miles of trekking, sometimes a little painful; it's quite the journey. The effort it takes to reach that summit, however, only adds to the feeling of awe and accomplishment when the goal is reached.<br><br>
+            More than just hiking, however, I also like to explore through different cities and cultures. When I travel to a new place I try to get the most out of it - I usually make my own walking tours through all the interesting sites I want to see. These tours are usually around 10-15 miles long per city, however I almost always end up getting sidetracked and seeing much more.</p>
+            <a href='../blog/blog.html'>Here is a link to more info about the hikes I've done and places I've visited.</a>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Favorite Hikes</b><br></h4>
+            <ul>
+                <li>Mount Ida<br><span>Rocky Mountain National Park</span></li>
+                <li>Precipice<br><span>Acadia National Park</span></li>
+                <li>Old Rag Trail<br><span>Shenandoah National Park</span></li>
+                <li>Prégentil<br><span>Parc des Écrins</span></li>
+                <li>Mount Mitchell<br><span>Mount Mitchell State Park</span></li>
+            </ul>
         </div>
         </div>
 
