--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <li><a href="#" class="scroll-link" data-id="experience">Experience</a></li>
                         <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
                         <li><a href="#" class="scroll-link" data-id="photography">Photography</a></li>
-                        <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li>
+                        <li><a href="blog/blog.html">Blog</a></li>
                         <li><a href="#" class="scroll-link" data-id="contact">Contact</a></li>
                     </ul>
                 </div>
