finished about and added js page

--- a/about/aboutme.html
+++ b/about/aboutme.html
@@ -254,56 +254,68 @@
         <div class="card">
         <div class="container">
             <h4><b>Activity</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <img src='../img/exercisePic.jpg'></img>
+            <div id='exercise-quote' style='margin-top:1.33em;'><h5>"It is a shame for a man to grow old without seeing the beauty and strength of which his body is capable" - Socrates</h5></div>
+            <p>Something else which is important to me is health and fitness. I believe that a healthy body leads to a healthy mind and vice versa. One of the biggest struggles in my life is trying to balance a healthy lifestyle with the workload of MIT; but I believe that little by little it is becoming easier for me.<br><br>
+            I spend about 8 hours a week at the gym and a couple more running, hiking, or doing other random sports with my friends. I used to play water polo in high school, and have a black belt in Shito-Ryu Karate. I also suck at soccer but would like to get better in the coming months.</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>Flying</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <p>My junior year of high school I started flight school at a private neighborhood airstrip near where I live. Flying is awesome - it's exciting, demanding, and beautiful; I loved it as a hobby. It is also really expensive, however. In high school I used to have my own small-scale tutoring business which I used to fully pay for my lessons, however I no longer had access to my clients so I sadly had to drop this hobby. I do still have a student pilot's lisence though, and definitely plan on
+            continuing this passion later in life. My goal is to one day have my own private pilot's lisence and plane, so I can explore the world on my own terms with the people I love.</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>Photography</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <p>I have recently started studying photography and trying to take cool pictures from all my hikes and travels. I will eventually put a lot of them up online, but for now:</p>
+            <a href='../index.html#photography'>check out my gallery on the home page!</a>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>Storytelling</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <p>When I start watching a movie or playing a game I am oftentimes looking to get deeply involved in the world. I love watching lore videos on youtube, discussing random things about the world on forums, and trying to learn as much as possible about the world I was introduced to.<br><br>
+            There are a few worlds I am very familiar with, such as Game of Thrones, Star Wars, the Elder Scrolls, and the Witcher - however for almost every piece of content I consume I am usually looking to get lost in the world.</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
-            <h4><b>Video Games</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <h4><b>Favorite Video Games</b><br></h4>
+            <ul>
+                <li>Dark Souls I and II<br><span>FromSoftware</span></li>
+                <li>The Witcher 3: Wild Hunt<br><span>CD Projeckt Red</span></li>
+                <li>The Elder Scrolls 5: Skyrim<br><span>Bethesda Softworks</span></li>
+                <li>Europa Universalis 4<br><span>Paradox Interactive</span></li>
+                <li>Knights of the Old Republic<br><span>Bioware</span></li>
+            </ul>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
-            <h4><b>Favorite Books</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <h4><b>Favorite Movies</b><br></h4>
+            <ul>
+                <li>Star Wars V: The Empire Strikes Back<br><span>Irvin Kershner</span></li>
+                <li>Jurassic Park<br><span>Steven Spielberg</span></li>
+                <li>Pulp Fiction<br><span>Quentin Tarantino</span></li>
+                <li>Raiders of the Lost Ark<br><span>Steven Spielberg</span></li>
+                <li>Apocalypse Now<br><span>Francis Ford Coppola</span></li>
+            </ul>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
             <h4><b>Mental Math and Memorization</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <img src='../img/memorizationBooks.jpg'></img>
+            <p>In the last few weeks I started reading these books to improve my memorization and mental math skills. I would highly reccomend them! It is incredible what your brain is capable of with a little bit of practice.</p>
         </div>
         </div>
 
