--- a/projectpages/miscellaneous.html
+++ b/projectpages/miscellaneous.html
@@ -33,6 +33,11 @@
                 <div id= 'block-img-link'><a href="https://github.com/sidereal/6.006"><img src="../img_projects/6006.PNG"></img></a></div>
             </div>
 
+            <div class="block">
+                <div id='block-name-link'><a id='name-link' href='../jsprojects/drawingsphere.html'>Drawing Tool</a></div>
+                <div id= 'block-img-link'><a href='../jsprojects/drawingsphere.html'><img src="../img_projects/drawingtool.PNG"></img></a></div>
+            </div>
+
             <!-- up to 4 blocks per row -->
         </div>
 
