fixed some typos

--- a/about/aboutme.html
+++ b/about/aboutme.html
@@ -45,7 +45,7 @@
         I value determination and self-discipline. I firmly believe that, with these two traits, any obstacle in life, no matter how big or how small, can be overcome. I also like to create. I often search for jobs where I can interplay creativity with craftsmanship. Particularly, this is why I am interested in fields such as computer science, phyiscs, and engineering. I enjoy interpreting problems, viewing them from a range of perspectives, and coming up with innovative solutions. I love making Unity projects, such as games and simulations. I find it so satisfying to make proper visualizations of interesting concepts in this manner.
         Likewise, I love making visualizations for datasets. However, my passion for data science truly comes from the exploration of the data itself: finding surprising trends and predictions. Data science often feels like I am using a computer to go beyond my human limitations; leveraging the power of computation to get a hint about some complicated trend - it is truly wonderful!<br><br>
 
-        I strive to be a leader. In my opinion, very few things of true value have been done by one person alone. I value cooperation, and the opinions of those around me. I try to understand others, and pass no judgement over their beliefs or ideas, regardless of my own - I put myself in their shoes. I will take every possible precaution and then act - never letting apprehension impede action. In my spare time, I have been working towards a private pilot's license. While learning to fly, fear and stress can easily take a hold of you – yet this agitation is underscored by the tranquility of floating in the clouds, and the wonder of seeing the entire world below you. This balance is something which seems to touch on much of life: focus and self-management in the moment will keep your head above the clouds long enough to think and see clearly; long enough to plot a forward course. 
+        I strive to be a leader. In my opinion, very few things of true value have been done by one person alone. I value cooperation, and the opinions of those around me. I try to understand others, and pass no judgement over their beliefs or ideas, regardless of my own - I put myself in their shoes. I will take every possible precaution and then act - never letting apprehension impede action. In my spare time, I have been working towards a private pilot's license. While learning to fly, fear and stress can easily take ahold of you – yet this agitation is underscored by the tranquility of floating in the clouds, and the wonder of seeing the entire world below you. This balance is something which seems to touch on much of life: focus and self-management in the moment will keep your head above the clouds long enough to think and see clearly; long enough to plot a forward course. 
         </p>
         </div>
         </div>
@@ -315,7 +315,7 @@
         <div class="container">
             <h4><b>Mental Math and Memorization</b><br></h4>
             <img src='../img/memorizationBooks.jpg'></img>
-            <p>In the last few weeks I started reading these books to improve my memorization and mental math skills. I would highly reccomend them! It is incredible what your brain is capable of with a little bit of practice.</p>
+            <p>In the last few weeks I started reading these books to improve my memorization and mental math skills. I would highly recommend them! It is incredible what your brain is capable of with a little bit of practice.</p>
         </div>
         </div>
 
